<resources>
    <string name="app_name">RealEstateManager</string>
    <string name="menu_add_estate">Add an estate</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="add_estate_rooms_hint">Rooms number :</string>
    <string name="add_estate_bathrooms_hint">Bathrooms number :</string>
    <string name="add_estate_bedrooms_hint">Bedrooms number :</string>
    <string name="add_estate_type_hint">Estate type :</string>
    <string name="add_estate_description_hint">Estate description</string>
    <string name="add_estate_price_hint">Estate price</string>
    <string name="add_estate_surface_hint">Estate surface</string>
    <string name="add_estate_address_hint">Estate address</string>
    <string name="add_estate_creation_button">Confirm creation</string>
    <string name="add_estate_modification_button">Confirm modification</string>
    <string name="add_estate_picture_description_warning">Please add a description for each picture</string>
    <string name="add_estate_picture_surface_warning">Veuillez entrer une surface en m² uniquement avec des caractère numérique</string>
    <string name="add_estate_picture_price_warning">Veuillez entrer un prix en $ uniquement avec des caractère numérique</string>
    <string name="add_estate_picture_address_warning">Veuillez entrer une adresse valide</string>
    <string name="main_no_estate_message">Veuillez créer un bien immobilier ou connectez-vous pour accéder aux bien en ligne</string>
    <string name="menu_modify_estate">Modify an estate</string>
    <string name="menu_search_estate">Search estates</string>
    <string name="main_search_button">Apply filter</string>
    <string name="add_estate_picture_description">Picture description</string>
    <string name="add_estate_permission_denied">We can not access to your phone data</string>
    <string name="add_estate_modification_success">Modification success !</string>
    <string name="add_estate_creation_success">Creation Success !</string>
    <string name="add_estate_sold_checkbox">Sold</string>
    <string name="add_estate_point_of_interest">Point of interest :</string>
    <string name="filter_estate_recently_sold">Recently sold</string>
    <string name="no_estate_found_with_internet">No estate found</string>
    <string name="no_estate_without_connexion">No internet connexion and no estate saved on your device</string>
    <string name="estate_detail_media">Media</string>
    <string name="estate_detail_description">Description</string>
    <string name="estate_detail_surface">Surface</string>
    <string name="estate_detail_number_of_rooms">Number of rooms</string>
    <string name="estate_detail_number_of_bathrooms">Number of bathrooms</string>
    <string name="estate_detail_number_of_bedrooms">Number of bedrooms</string>
    <string name="estate_detail_location">Location</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="loan_simulator_initial_loan_amount">Initial Loan Amount :</string>
    <string name="loan_simulator_annual_interest_rate">Annual interest rate :</string>
    <string name="loan_simulator_loan_term_in_months">Loan term in months :</string>
    <string name="simulate_loan_button_text">Simulate loan</string>
    <string name="loan_simulator_result">Monthly payment : %s\nTotal cost : %s</string>
    <string name="settings_price_dollar_currency_toggle">Price in dollars</string>
    <string name="settings_price_euro_currency_toggle">Price in euro</string>
    <string name="settings_agent_name">Agent Name :</string>
    <string name="add_estate_no_agent_name">You don\'t have defined your name in settings</string>
    <string name="settings_confirm_preference">Save settings</string>
</resources>