<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/estate_add"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/menu_add_estate"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/estate_modify"
        android:icon="@drawable/baseline_create_24"
        android:title="@string/menu_modify_estate"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/estate_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/menu_search_estate"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>
</menu>