<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin_medium"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin_medium"
            android:text="@string/estate_detail_media"
            android:textSize="@dimen/text_size_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_margin_medium"
            android:orientation="horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin_medium"
            android:text="@string/estate_detail_description"
            android:textSize="@dimen/text_size_title" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/fab_margin_medium"
            android:textSize="@dimen/text_size_subtitle"
            tools:text="@string/lorem_ipsum" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin_medium"
                    android:drawableStart="@drawable/baseline_border_inner_24"
                    android:drawablePadding="@dimen/fab_margin_medium"
                    android:text="@string/estate_detail_surface"
                    android:textSize="@dimen/text_size_body" />

                <TextView
                    android:id="@+id/surface"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin_medium"
                    android:paddingStart="@dimen/fab_margin_extra_large"
                    tools:text="100 m²" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin_medium"
                    android:drawableStart="@drawable/baseline_home_24"
                    android:drawablePadding="@dimen/fab_margin_medium"
                    android:text="@string/estate_detail_number_of_rooms"
                    android:textSize="@dimen/text_size_body" />

                <TextView
                    android:id="@+id/nb_rooms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin_medium"
                    android:paddingStart="@dimen/fab_margin_extra_large"
                    tools:text="8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin_medium"
                    android:drawableStart="@drawable/baseline_bathtub_24"
                    android:drawablePadding="@dimen/fab_margin_medium"
                    android:text="@string/estate_detail_number_of_bathrooms"
                    android:textSize="@dimen/text_size_body" />

                <TextView
                    android:id="@+id/nb_bathrooms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin_medium"
                    android:paddingStart="@dimen/fab_margin_extra_large"
                    tools:text="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin_medium"
                    android:drawableStart="@drawable/baseline_bed_24"
                    android:drawablePadding="@dimen/fab_margin_medium"
                    android:text="@string/estate_detail_number_of_bedrooms"
                    android:textSize="@dimen/text_size_body" />

                <TextView
                    android:id="@+id/nb_bedrooms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin_medium"
                    android:paddingStart="@dimen/fab_margin_extra_large"
                    tools:text="4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/fab_margin_medium"
                            android:text="@string/estate_detail_location"
                            android:textSize="@dimen/text_size_body" />

                        <TextView
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/fab_margin_extra_large"
                            tools:text="@string/lorem_ipsum" />
                    </LinearLayout>

                    <GridLayout
                        android:id="@+id/interest_points"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginVertical="@dimen/fab_margin_medium"
                        android:layout_weight="1"
                        android:columnCount="2"
                        android:rowCount="3" />
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/map_view"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/fab_margin_medium" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>