<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fab_margin_medium"
    android:orientation="vertical">
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_simulator_initial_loan_amount"
            android:labelFor="@+id/loan_amount"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loan_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size_title"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_simulator_annual_interest_rate"
            android:textSize="@dimen/text_size_title"
            android:labelFor="@+id/annual_interest_rate"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/annual_interest_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size_title"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/loan_term_months"
            android:text="@string/loan_simulator_loan_term_in_months"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loan_term_months"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size_title"
            android:autofillHints="" />
    </LinearLayout>

    <Button
        android:id="@+id/simulate_loan_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin_medium"
        android:text="@string/simulate_loan_button_text"
        android:textSize="@dimen/text_size_title" />

    <TextView
        android:id="@+id/simulate_loan_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_title" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>